makes dropdown menu links smaller.  Fixes gap in poll and adds icon to breaking news

--- a/sites/all/themes/slac/css/blocks.css
+++ b/sites/all/themes/slac/css/blocks.css
@@ -282,3 +282,7 @@ a.submit-feedback {
   overflow: hidden;
   border-bottom: 1px dashed transparent;
 }
+
+.pane-panels-mini.pane-poll-mini-panel {
+  display: inline-block;
+}
