--- a/sites/all/themes/slac/sass/components/_navigation.scss
+++ b/sites/all/themes/slac/sass/components/_navigation.scss
@@ -401,3 +401,6 @@ ul.tb-megamenu-subnav {
   width: 100% !important;
 }
 
+.tb-megamenu .dropdown-menu li > a {
+  font-size: 12px;
+}
